styling mission, tombstone and map

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,11 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <!-- addional styling of map(differnet filters) -->
+    <!-- https://github.com/leaflet-extras/leaflet-providers -->
+    <script src="http://unpkg.com/leaflet@latest/dist/leaflet.js"></script>
+    <script src="js/leaflet-providers.js"></script>
+
     <!-- Needed for styling the map-->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
       integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14=" crossorigin="" />
